--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="In this document you can see the task of creating a weather forecast with the use of HTML and CSS" />
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link href="css/style.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/weather-icons.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.5/css/weather-icons.min.css">
 </head>
 <body>
 	<div class="wf-container">
